--- a/packages/pilot-server/package.json
+++ b/packages/pilot-server/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "nodemon src/app.js --exec babel-node --presets env,stage-2",
     "build": "babel src -d dist --source-maps",
-    "serve": "node dist/app.js"
+    "serve": "node dist/app.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "4.16.0",
@@ -14,6 +15,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.26.0",
+    "jest": "^23.6.0",
     "nodemon": "1.17.5"
   },
   "dependencies": {
