--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
-  "private": true,
+  "name": "pilot",
   "version": "0.1.0",
-  "license": "UNLICENSED",
   "scripts": {
-    "start": "concurrently 'cd ./packages/pilot-client && yarn start' 'cd ./packages/pilot-server && yarn start'"
+    "start": "nodemon src/app.js --exec babel-node --presets env,stage-2",
+    "build": "babel src -d dist --source-maps",
+    "serve": "node dist/app.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
-  "workspaces": [
-    "packages/pilot-server",
-    "packages/pilot-client"
-  ],
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "@types/express": "4.16.0",
+    "@types/graphql": "0.13.1",
+    "babel-cli": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-register": "6.26.0",
+    "jest": "^23.6.0",
+    "nodemon": "1.17.5"
+  },
+  "dependencies": {
+    "axios": "0.18.0",
+    "cors": "2.8.4",
+    "dotenv": "6.0.0",
+    "express": "4.16.3",
+    "express-graphql": "0.6.12",
+    "graphql": "0.13.2",
+    "graphql-tag": "2.9.2",
+    "graphql-tools": "3.0.2",
+    "npm": "6.1.0",
+    "ramda": "0.25.0"
   }
 }
