--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon src/app.js --exec babel-node --presets env,stage-2",
     "build": "babel src -d dist --source-maps",
     "serve": "node dist/app.js",
+    "format:fix": "npx prettier --write './src/**/*.js'",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
