--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@types/express": "4.16.0",
-    "@types/graphql": "0.13.1",
-    "babel-cli": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "babel-register": "6.26.0",
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.16.1",
+    "@types/graphql": "^14.0.6",
+    "@types/jest": "^24.0.3",
+    "@types/ramda": "^0.25.49",
     "jest": "^23.6.0",
     "nodemon": "1.17.5"
   },
@@ -26,9 +24,9 @@
     "dotenv": "6.0.0",
     "express": "4.16.3",
     "express-graphql": "0.6.12",
-    "graphql": "0.13.2",
-    "graphql-tag": "2.9.2",
-    "graphql-tools": "3.0.2",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.4",
     "libnpm": "^2.0.1",
     "ramda": "^0.26.1"
   }
