--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "pilot",
   "version": "0.1.0",
   "scripts": {
-    "start": "nodemon src/app.js --exec babel-node --presets env,stage-2",
-    "build": "babel src -d dist --source-maps",
+    "start": "nodemon index.js",
+    "build": "tsc",
     "serve": "node dist/app.js",
     "format:fix": "npx prettier --write './src/**/*.js'",
     "test": "jest --coverage",
@@ -11,12 +11,15 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.6",
     "@types/jest": "^24.0.3",
     "@types/ramda": "^0.25.49",
     "jest": "^23.6.0",
-    "nodemon": "1.17.5"
+    "nodemon": "1.17.5",
+    "typescript": "^3.3.3"
   },
   "dependencies": {
     "axios": "0.18.0",
