--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.6",
     "@types/jest": "^24.0.3",
+    "@types/jest-diff": "^20.0.1",
     "@types/ramda": "^0.25.49",
     "jest": "^23.6.0",
     "nodemon": "1.17.5",
