feat: typescriptify #wip

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "module": "amd",
+    "target": "es5",
+    "module": "commonjs",
+    "outDir": "./dist",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "removeComments": true,
-    "preserveConstEnums": true,
-    "outFile": "./dist/index.js",
-    "sourceMap": true
+    "preserveConstEnums": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
