--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pilot",
   "version": "0.1.0",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon dist/index.js",
     "build": "tsc",
-    "serve": "node dist/app.js",
+    "serve": "node dist/index.js",
     "format:fix": "npx prettier --write './src/**/*.js'",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
