--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.6",
-    "@types/jest": "^24.0.3",
+    "@types/jest": "^24.0.5",
     "@types/jest-diff": "^20.0.1",
     "@types/ramda": "^0.25.49",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "nodemon": "1.17.5",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.3.3"
   },
   "dependencies": {
